SRC/Major Assignment/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{00000}</displayFormat>
        <label>Transaction Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Debit_Amount_More_Than_Limit</fullName>
        <active>false</active>
        <description>User won&apos;t be able to debit amount.</description>
        <errorConditionFormula>AND( Contact__r.Available_Balance__c &lt; 3000, ISPICKVAL(Type__c, &quot;Debit&quot;))</errorConditionFormula>
        <errorMessage>Error ! You can&apos;t debit amount. &apos;Not Enough Balance&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_Per_Day</fullName>
        <active>false</active>
        <description>Maximum Debit Able Amount Per day</description>
        <errorConditionFormula>AND(  Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Day__c &lt;  Amount__c  , ISPICKVAL( Type__c , &quot;Debit&quot;))</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You can&apos;t debit the amount after exceeding the Limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_Per_Month</fullName>
        <active>false</active>
        <description>You Can&apos;t debit amount more than the month debit limit.</description>
        <errorConditionFormula>AND( Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Month__c &lt;  Amount__c , ISPICKVAL( Type__c , &quot;Debit&quot;) )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You won&apos;t be able to debit more amount in this month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_Per_Transaction</fullName>
        <active>false</active>
        <description>Debit transaction Limit</description>
        <errorConditionFormula>AND( Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Transaction__c &lt;  Amount__c , ISPICKVAL( Type__c , &quot;Debit&quot;))</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Error ! You can&apos;t debit more amount in this transaction.</errorMessage>
    </validationRules>
</CustomObject>